[gd_scene load_steps=7 format=3 uid="uid://fusraiemv1iq"]

[ext_resource type="Script" uid="uid://b5vjuk4uidi2x" path="res://scene/site/site.gd" id="1_1q5xp"]
[ext_resource type="Resource" uid="uid://ce08xp1n0merx" path="res://resources/site_data/test_site/test_site1.tres" id="2_l3cml"]
[ext_resource type="Shader" uid="uid://4rvtxmlqmmvu" path="res://addons/outline/outline.gdshader" id="3_n82gw"]
[ext_resource type="Texture2D" uid="uid://b2re17pt0iqlf" path="res://asset/kenney_boardgame-pack/PNG/Pieces (White)/pieceWhite_single06.png" id="4_t7q8j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ox0mr"]
resource_local_to_scene = true
shader = ExtResource("3_n82gw")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[sub_resource type="BitMap" id="BitMap_1q5xp"]

[node name="Site" type="Control" groups=["site"]]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
offset_left = -50.0
offset_top = -50.0
offset_right = -50.0
offset_bottom = -50.0
pivot_offset = Vector2(50, 50)
script = ExtResource("1_1q5xp")
site_data = ExtResource("2_l3cml")

[node name="TextureButton" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_ox0mr")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_t7q8j")
texture_click_mask = SubResource("BitMap_1q5xp")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -9.0
offset_top = 2.0
offset_right = 109.0
offset_bottom = 25.0
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pIFLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 74.0
offset_right = 50.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0.294118, 0.694118, 0.313726, 1)
text = "1"
horizontal_alignment = 1

[node name="cIFLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 74.0
offset_right = 90.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0.314316, 0.314316, 0.314316, 1)
text = "2"
horizontal_alignment = 1

[connection signal="gui_input" from="TextureButton" to="." method="_on_texture_button_gui_input"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
